--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,6 +1,8 @@
 rootProject.name = 'ValueEducation'
 
 include ':app'
+include ':react-native-google-analytics-bridge'
+project(':react-native-google-analytics-bridge').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-google-analytics-bridge/android')
 include ':react-native-orientation-listener'
 project(':react-native-orientation-listener').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-orientation-listener/android')
 include ':react-native-image-picker'
