--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "react": "15.3.1",
     "react-native": "0.33.0",
     "react-native-datepicker": "^1.3.2",
+    "react-native-datetime": "^0.1.2",
     "react-native-dismiss-keyboard": "^1.0.0",
+    "react-native-google-analytics-bridge": "^3.1.0",
     "react-native-image-picker": "^0.22.7",
     "react-native-orientation-listener": "0.0.4",
     "react-native-router-flux": "^3.35.0",
