--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: "com.android.application"
-
 import com.android.build.OutputFile
 
 /**
@@ -126,6 +125,9 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-splash-screen')
+    compile project(':RCTYouTube')
+    compile project(':react-native-google-analytics-bridge')
     compile project(':react-native-orientation-listener')
     compile project(':react-native-image-picker')
     compile project(':react-native-video')
@@ -133,10 +135,15 @@ dependencies {
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
+    compile("com.google.android.gms:play-services-analytics:8.3.0"){
+        force = true
+    }
 }
 
-// Run this once to be able to run the application with BUCK
+// Run this once to be able to run the application with BUCK 
+// compile 'com.google.android.gms:play-services-analytics:9.2.0'
 // puts all compile dependencies into folder libs for BUCK to use
+// apply plugin: 'com.google.gms.google-services'
 task copyDownloadableDepsToLibs(type: Copy) {
   from configurations.compile
   into 'libs'
