--- a/package.json
+++ b/package.json
@@ -6,16 +6,24 @@
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
+    "@remobile/react-native-splashscreen": "^1.0.3",
     "lodash": "^4.13.1",
     "react": "15.3.1",
     "react-native": "0.33.0",
+    "react-native-animatable": "^0.6.1",
+    "react-native-collapsible": "^0.7.0",
     "react-native-datepicker": "^1.3.2",
     "react-native-dismiss-keyboard": "^1.0.0",
+    "react-native-google-analytics-bridge": "^3.1.0",
     "react-native-image-picker": "^0.22.7",
     "react-native-orientation-listener": "0.0.4",
+    "react-native-responsive-styles": "^0.2.1",
     "react-native-router-flux": "^3.35.0",
+    "react-native-splash-screen": "^1.0.5",
+    "react-native-tab-navigator": "^0.3.3",
     "react-native-vector-icons": "^2.1.0",
-    "react-native-video": "^0.9.0"
+    "react-native-video": "^0.9.0",
+    "react-native-youtube": "^0.8.0"
   },
   "devDependencies": {
     "eslint": "^3.5.0",
