--- a/package.json
+++ b/package.json
@@ -6,16 +6,44 @@
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
+    "@remobile/react-native-splashscreen": "^1.0.3",
+    "immutable": "~3.7.6",
+    "keymirror": "^0.1.1",
     "lodash": "^4.13.1",
     "react": "15.3.1",
     "react-native": "0.33.0",
+    "react-native-animatable": "^0.6.1",
+    "react-native-autogrow-textinput": "^3.0.1",
+    "react-native-carousel": "^0.10.0",
+    "react-native-carousel-control": "^1.0.5",
+    "react-native-checkbox": "^1.0.15",
+    "react-native-collapsible": "^0.7.0",
     "react-native-datepicker": "^1.3.2",
+    "react-native-device-info": "^0.9.6",
     "react-native-dismiss-keyboard": "^1.0.0",
+    "react-native-drawer": "^2.3.0",
+    "react-native-emoji": "^1.2.0",
+    "react-native-fs": "^2.0.1-rc.2",
+    "react-native-google-analytics-bridge": "^3.1.0",
     "react-native-image-picker": "^0.22.7",
+    "react-native-loading-spinner-overlay": "^0.3.0",
     "react-native-orientation-listener": "0.0.4",
+    "react-native-push-notification": "^2.1.1",
+    "react-native-responsive-styles": "^0.2.1",
+    "react-native-root-toast": "^1.0.3",
     "react-native-router-flux": "^3.35.0",
+    "react-native-scrollable-tab-view": "^0.6.0",
+    "react-native-share": "^1.0.17",
+    "react-native-simple-modal": "^4.0.1",
+    "react-native-slider": "^0.9.1",
+    "react-native-splash-screen": "^1.0.5",
+    "react-native-tab-navigator": "^0.3.3",
     "react-native-vector-icons": "^2.1.0",
-    "react-native-video": "^0.9.0"
+    "react-native-video": "^0.9.0",
+    "react-native-youtube": "^0.8.0",
+    "react-redux": "^4.4.5",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
     "eslint": "^3.5.0",
